# historical-price-cron-archiver

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.app.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
config/: symbols.yaml  yfinance.yaml
migrations/: 001_initial.sql  002_yfinance_ohlcv.sql
scripts/: backfill_yfinance.py  init_db.py
src/: celery_app.py
src/db/: connection.py  models.py
src/tasks/: ohlcv.py  orderbook.py  ticker.py  yfinance_ohlcv.py
src/utils/: alerting.py  ccxt_client.py  config_loader.py  retry.py  yfinance_client.py
